<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Playlist Maker</string>
    <string name="app_search">Поиск</string>
    <string name="app_media">Медиатека</string>
    <string name="app_settings">Настройки</string>
    <string name="blacktheme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="texttosupport">Написать в поддержку</string>
    <string name="nomedia">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="fav_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="Media">Медиатека</string>


    <string name="bckbt">Кнопка Назад</string>

    <string name="useragreement">Пользовательское соглашение</string>
    <string name="linkforad">https://practicum.yandex.ru/android-developer/</string>
    <string name="linkfoua">https://yandex.ru/legal/practicum_offer/</string>
    <string name="messagefoad">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanksforad">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email">muriona@yandex.ru</string>

    <string name="toast_share">На устройстве нет приложения, через которое можно поделиться приложением</string>
    <string name="toast_ua">На устройстве нет приложения, через которое можно открыть ссылку на пользовательское соглашение</string>
    <string name="toast_mestosupport">На устройстве нет приложения, через которое можно написать в поддержку </string>


    <string name="err_srch">Ничего не нашлось</string>
    <string name="error_cnn">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_history">Вы искали</string>

    <string name="duration">Длительность</string>
    <string name="albumofsong">Альбом</string>
    <string name="yearofsong">Год</string>
    <string name="genreofsong">Жанр</string>
    <string name="countryofsong">Страна</string>
    <string name="durationtest">0:30</string>
    <string name="oo_time">0:00</string>

    <string name="name_new_playlist">Название</string>
    <string name="description"> Описание </string>
    <string name="create"> Создать </string>
    <string name="exit_dialog_title">Завершить создание плейлиста?</string>
    <string name="exit_dialog_title2">Завершить редактирование плейлиста?</string>
    <string name="exit_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Завершить</string>
    <string name="playlist_created">Плейлист создан</string>
    <string name="playlist_name_required">Введите название плейлиста</string>
    <string name="playlist_save_error">Ошибка при создании плейлиста</string>
    <plurals name="tracks_count">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="no_playlists2">Нет плейлистов</string>
    <string name="track_in_playlist">Трек добавлен в плейлист</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="error">Ошибка: %s</string>

    <string name="want_to_delete">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>

    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="no_tracks">В этом плейлисте нет треков</string>

    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист \"%1$s\"?</string>
    <string name="changed_playlist">Изменения в плейлисте сохранены</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>

    <string name="shareplaylist">Поделиться</string>

</resources>