<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LLstyleStns"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/backbtn"
            android:contentDescription="@string/bckbt"
            android:layout_marginEnd="50dp"
            app:tint="@color/backbutton_tint" />

        <TextView
            android:text="@string/app_settings"
            android:fontFamily="@font/ys_display_regular"
            style="@style/MainTextinActivitySettings" />
    </LinearLayout>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_marginTop="@dimen/dpthree"
        android:text="@string/blacktheme"
        android:padding="@dimen/dpfour"
        android:paddingEnd="-3dp"
        style="@style/CustomSwitch"

        />

    <Button
        android:id="@+id/share"
        android:drawableEnd="@drawable/share"
        android:text="@string/share"

        style="@style/BtnSettings" />

    <Button
        android:id="@+id/talktosupport"
        style="@style/BtnSettings"
        android:drawableEnd="@drawable/support"
        android:text="@string/texttosupport" />

    <Button
        android:id="@+id/usag"
        style="@style/BtnSettings"
        android:drawableEnd="@drawable/ua"
        android:text="@string/useragreement" />
</LinearLayout>
