<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dpthree"
    style="@style/LLstyleMain">
    <TextView
        android:text="@string/app_name"
        android:fontFamily="@font/ys_display_medium"
        style="@style/MainTextinActivityMain"/>

    <Button
        android:text="@string/app_search"
        android:id="@+id/se"
        app:icon="@drawable/search"
        style="@style/BtnActivityMain"/>
    <Button
        android:id="@+id/media"
        android:text="@string/app_media"
        app:icon="@drawable/mediam"
        style="@style/BtnActivityMain"/>
    <Button
        android:id="@+id/settings"
        android:text="@string/app_settings"
        app:icon="@drawable/settpic"
        style="@style/BtnActivityMain"/>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:navGraph="@navigation/navigation_graph"
        app:defaultNavHost="true" />
</LinearLayout>
