<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/searchBack"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_56dp"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/size_16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_search"
            android:textColor="@color/backbutton_tint"
            android:textSize="@dimen/size_22sp"
            android:fontFamily="@font/ys_display_medium" />
    </LinearLayout>
    <FrameLayout
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:hint="@string/app_search"
            android:maxLines="1"
            android:inputType="text"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/size_16sp"
            android:textColor="@color/black"
            android:maxLength="30"
            android:fontFamily="@font/ys_display_regular"
            android:textColorHint="@color/textColorHint"
            android:background="@drawable/rounded_edittext_background"
            android:backgroundTint="@color/backgroundTintsettings"
            android:drawableStart="@drawable/backbtnsearch"
            app:drawableTint="@color/textColorHint"
            android:drawablePadding="@dimen/size_8dp"
            android:paddingStart="@dimen/size_12dp"
            />
        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clearicon"
            android:layout_gravity="end|center_vertical"
            android:scaleType="center"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ErrorSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:id="@+id/ErrorSearchImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/err_srch"
            android:layout_gravity="center_horizontal" />

        <TextView

            style="@style/placeholderText"
            android:textFontWeight="400"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/size_24dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_16dp"
            android:letterSpacing="0"
            android:id="@+id/ErrorSearchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/err_srch"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ErrorSearch2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:id="@+id/ErrorSearchImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/err_cnct"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/placeholderText"
            android:textFontWeight="400"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/size_24dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_16dp"
            android:letterSpacing="0"
            android:id="@+id/ErrorSearchText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_cnn"
            />
        <Button
            style="@style/updateButton"
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0"
            android:textFontWeight="500"
            android:text="@string/refresh"
            android:textAllCaps = "false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_24dp"
            android:paddingTop="@dimen/size_10dp"
            android:paddingStart="@dimen/size_14dp"
            android:paddingEnd="@dimen/size_14dp"
            android:paddingBottom="@dimen/size_10dp"
            app:cornerRadius="54dp"
            android:visibility="gone"/>

    </LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">
    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_marginTop="150dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorProgressBar"
        android:visibility="gone"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/historyView2"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_marginHorizontal="@dimen/size_24dp"
        android:textFontWeight="500"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_history"
        android:letterSpacing="0"
        android:id="@+id/historyView"
        android:lineHeight="@dimen/size_0dp"
        android:visibility="gone"
        style="@style/searchHistory"
        />

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recyclerVieww"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_marginStart="@dimen/dpfour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_10dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/track_layout"/>
    <com.google.android.material.button.MaterialButton
        style="@style/clearHistoryBtn"

        app:cornerRadius="54dp"
        android:lineHeight="@dimen/size_0dp"
        android:textFontWeight="500"
        android:letterSpacing="0"
        android:id="@+id/clearSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/clear_history" />

</LinearLayout>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerView"
    android:layout_marginTop="@dimen/size_16dp"
    android:layout_marginStart="@dimen/dpfour"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/size_10dp"
    android:layout_weight="1"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    tools:listitem="@layout/track_layout"/>

</LinearLayout>
    </LinearLayout>