<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/searchBack"
    android:orientation="vertical"

     >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpseven"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/dpone"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/backbtn"
            android:contentDescription="@string/bckbt"
            android:layout_marginEnd="30dp"
            app:tint="@color/backbutton_tint" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_search"

            android:textColor="@color/backbutton_tint"
            android:textSize="@dimen/spone"

            android:fontFamily="@font/ys_display_medium" />
    </LinearLayout>
    <FrameLayout
        android:layout_marginStart="@dimen/dpone"
        android:layout_marginEnd="@dimen/dpone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >
        <com.google.android.material.textfield.TextInputEditText
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:hint="@string/app_search"
            android:maxLines="1"
            android:inputType="text"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/sptwo"
            android:textColor="@color/black"
            android:maxLength="30"
            android:fontFamily="@font/ys_display_regular"
            android:textColorHint="@color/textColorHint"
            android:background="@drawable/rounded_edittext_background"
            android:backgroundTint="@color/backgroundTintsettings"
            android:drawableStart="@drawable/backbtnsearch"
            app:drawableTint="@color/textColorHint"
            android:drawablePadding="@dimen/dpfive"
            android:paddingStart="@dimen/dpsix"
            />
        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clearicon"


            android:layout_gravity="end|center_vertical"
            android:scaleType="center"
            android:visibility="gone" />

    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_marginTop="@dimen/dpone"
        android:layout_marginStart="@dimen/dpfour"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/track_layout"
        />
    <LinearLayout
        android:id="@+id/placeholderMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholderImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:textAlignment="center"
            android:layout_marginHorizontal="24dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:id="@+id/placeholderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/err_srch"
            android:textColor="#000"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="18sp" />
        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            android:text="Обновить"
            android:textAllCaps = "false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:paddingTop="10dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:paddingBottom="10dp"
            android:backgroundTint="#1A1B22"
            android:fontFamily="@font/ys_display_medium"
            app:cornerRadius="54dp"

            android:visibility="gone"/>

</LinearLayout> </LinearLayout>